--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,11 +29,6 @@ a {
   box-sizing: border-box;
 }
 
-main {
-    padding: 5rem 3rem;
-    @include respond(phone) { padding: 4rem 2rem; }
-}
-
 /*
 color pallet
 #F18F01
